--- a/test/index.html
+++ b/test/index.html
@@ -1,20 +1,19 @@
 <html>
 <head>
-	<meta charset="utf-8">
+	<meta charset='utf-8'>
 	<title>rvc tests</title>
-	<link rel="stylesheet" href="vendor/mocha/mocha.css" />
+	<link rel='stylesheet' href='vendor/mocha/mocha.css' />
 </head>
 <body>
-	<div id="mocha"></div>
+	<div id='mocha'></div>
+	<div id='fixture'></div>
 
-	<script src="vendor/ractive/ractive-legacy.js"></script>
-	<script src="vendor/mocha/mocha.js"></script>
-	<script src="vendor/chai/chai.js"></script>
-	<script src="vendor/requirejs/require.js"></script>
+	<script src='vendor/mocha/mocha.js'></script>
+	<script src='vendor/chai/chai.js'></script>
+	<script src='vendor/requirejs/require.js'></script>
 	<script>mocha.setup('bdd')</script>
-	<script src="tests.js"></script>
+	<script src='tests.js'></script>
 	<script>
-		mocha.checkLeaks();
 		mocha.run();
 	</script>
 </body>
